--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,19 @@ steps:
   inputs:
     terraformVersion: 'latest'
 
+- task: replacetokens@5
+  inputs:
+    targetFiles: '**/*.tf'
+    encoding: 'auto'
+    tokenPattern: 'rm'
+    writeBOM: true
+    actionOnMissing: 'warn'
+    keepToken: false
+    actionOnNoFiles: 'continue'
+    enableTransforms: false
+    enableRecursion: false
+    useLegacyPattern: false
+    enableTelemetry: true
 - task: TerraformTaskV3@3
   displayName: 'tearraform init'
   inputs:
